--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="md:w-1/4 flex justify-center md:justify-end">
                 <!-- Image source updated to reference the uploaded file name -->
                 <img 
-                    src="Coverpage-Journey Through AI Land-Final 1.jpg" 
+                    src="AI Land Cover Page Final.png" 
                     onerror="this.onerror=null;this.src='https://placehold.co/180x270/e36f4d/371e7d?text=Image+Load+Error'"
                     alt="Cover of the book Journey Through AI Land" 
                     class="w-32 md:w-44 h-auto rounded-lg shadow-2xl transform hover:scale-105 transition duration-300 border-4 border-amber-400"
