--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
             transform: scale(1.05);
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7194127078366811"
+     crossorigin="anonymous"></script>
 </head>
 <body class="p-4 md:p-8">
 
