--- a/Test-Index.html
+++ b/Test-Index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7194127078366811"
+     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-7194127078366811">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Tool Reference Guide</title>
@@ -101,8 +105,7 @@
             transform: scale(1.05);
         }
     </style>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7194127078366811"
-     crossorigin="anonymous"></script>
+
 </head>
 <body class="p-4 md:p-8">
 
