--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7194127078366811"
+     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-7194127078366811">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Tool Reference Guide</title>
     <!-- Load Tailwind CSS -->
