--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Tool Reference Guide</title>
     <!-- Load Tailwind CSS -->
@@ -102,6 +101,10 @@
             transform: scale(1.05);
         }
     </style>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7194127078366811"
+     crossorigin="anonymous"></script>
+    
 </head>
 <body class="p-4 md:p-8">
 
@@ -621,7 +624,7 @@
     <!-- Footer Note -->
     <footer class="mt-12 text-center text-sm text-gray-500">
         <p class="border-t pt-4">
-             <a href="#" class="pulsing-link text-sm md:text-base">
+             <a href="https://www.amazon.com/dp/B0G31649D4/" class="pulsing-link text-sm md:text-base">
                         Get the Book Here!
                     </a>
             </p>
