--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
     <!-- Footer Note -->
     <footer class="mt-12 text-center text-sm text-gray-500">
         <p class="border-t pt-4">
-             <a href="https://www.amazon.com/dp/B0G31649D4/" class="pulsing-link text-sm md:text-base">
+             <a href="https://www.amazon.com/dp/B0G31649D4/" target="_blank" class="pulsing-link text-sm md:text-base">
                         Get the Book Here!
                     </a>
             </p>
