--- a/Test-Index.html
+++ b/Test-Index.html
@@ -118,9 +118,8 @@
                 <h1 class="text-3xl md:text-5xl font-extrabold mb-2 leading-tight">AI Tool Reference Guide</h1>
                 <h2 class="text-xl md:text-2xl font-light text-gray-200 mb-6">
                     A curated guide to leading Generative AI tools, based on the insights from Book: <Strong>
-                     <a href="https://www.amazon.com/dp/B0G31649D4/" target="_blank" class="pulsing-link text-sm md:text-base">
-                        Journey Through AI Land
-                    </a>   </Strong>
+                     <a href="https://www.amazon.com/dp/B0G31649D4/" target="_blank" >
+                        Journey Through AI Land </a>   </Strong>
 
                     
                     
