--- a/Test-Index.html
+++ b/Test-Index.html
@@ -118,7 +118,7 @@
                 <h1 class="text-3xl md:text-5xl font-extrabold mb-2 leading-tight">AI Tool Reference Guide</h1>
                 <h2 class="text-xl md:text-2xl font-light text-gray-200 mb-6">
                     A curated guide to leading Generative AI tools, based on the insights from Book: <Strong>
-                     <a href="https://www.amazon.com/dp/B0G31649D4/" target="_blank" >
+                     <a href="https://www.amazon.com/dp/B0G31649D4/" target="_blank" rel="noopener noreferrer" >
                         Journey Through AI Land </a>   </Strong>
 
                     
@@ -631,7 +631,7 @@
     <footer class="mt-12 text-center text-sm text-gray-500">
         <p class="border-t pt-4">
 
-             <a href="https://www.amazon.com/dp/B0G31649D4/" target="_blank" class="pulsing-link text-sm md:text-base">
+             <a href="https://www.amazon.com/dp/B0G31649D4/" target="_blank" rel="noopener noreferrer" class="pulsing-link text-sm md:text-base">
                         Get the Book Here!
                     </a> 
             
